# picture-tools

./: README.md  file_name_delete.py  location_quarter_sort.py  sim_image_delete.py  sim_image_find.py
duplicate-finder/: pyproject.toml
duplicate-finder/dupfind/: hashing.py  main.py  purge.py
duplicate-finder/dupfind/tests/: test_hashing.py  test_pickling_file_hasher.py  test_purge.py
