[tool.poetry]
name = "dupfind"
version = "0.1.0"
description = ""
authors = ["Yannik Queisler <dev.yannik.queisler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ImageHash = "^4.3.1"
Pillow = "^10.1.0"
pillow-heif = "^0.13.1"
tqdm = "^4.66.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
